tests/types/errors/generic_param_conflict.mochi
fun pair<T>(a: T, b: T): T {
  return a
}

print(pair(1, "two"))
